--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 250px;
+  width: 200px;
   height: 100vh;
   padding: 20px;
   background-color: #fff6eb;
@@ -21,6 +21,7 @@ body {
   .nav_item_parent {
     color: #693100;
     padding: 11px;
+    border-radius: 11px;
     line-height: 16px;
     cursor: pointer;
   }
@@ -31,7 +32,7 @@ body {
 }
 
 .main_content_parent {
-  margin-left: 250px;
+  margin-left: 200px;
   padding: 20px;
   color: black;
 }
