--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,8 @@ body {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 200px;
+  width: 225px;
   height: 100vh;
-  padding: 20px;
   background-color: #fff6eb;
   box-sizing: border-box;
 
@@ -31,8 +30,27 @@ body {
   }
 }
 
+.nav_title_parent {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 50px 1fr;
+
+  .nav_logo {
+    background-color: white;
+    line-height: 0;
+  }
+
+  .nav_title {
+    margin-left: 10px;
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 600;
+    color: #693100;
+  }
+}
+
 .main_content_parent {
-  margin-left: 200px;
+  margin-left: 225px;
   padding: 20px;
   color: black;
 }
