--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 .side_nav_content {
-  border: 1px solid rgba(255, 0, 0, 0.147);
+  /* border: 1px solid rgba(255, 0, 0, 0.147); */
   height: 100%;
 
   display: flex;
@@ -49,7 +49,7 @@ body {
   align-content: stretch;
 
   .nav_header {
-    background-color: #f6eadb;
+    /* background-color: #f6eadb; */
   }
 
   .nav_links {
@@ -59,7 +59,14 @@ body {
   }
   .nav_footer {
     background-color: #f6eadb;
+    text-align: center;
   }
+}
+
+.material-icons {
+  /* font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24; */
+  /* font-size: 55px;
+  color: #ff4c00; */
 }
 
 .item-test {
