--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,6 @@ body {
   margin: 0;
 }
 
-/* .flex-container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: stretch;
-  align-content: stretch;
-} */
-
 .side_nav_parent {
   position: fixed;
   padding: 10px;
@@ -28,7 +19,7 @@ body {
   background-color: #fff6eb;
   box-sizing: border-box;
   transition: width 0.17s ease-in-out;
-  /* flex */
+  z-index: 10000;
 }
 
 .side_nav_parent:hover {
@@ -40,18 +31,17 @@ body {
 .side_nav_content {
   /* border: 1px solid rgba(255, 0, 0, 0.147); */
   height: 100%;
-
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: stretch;
   align-content: stretch;
+}
 
-  .nav_header {
-    /* background-color: #f6eadb; */
-    background-color: #fff6eb;
-  }
+.nav_header {
+  /* background-color: #f6eadb; */
+  background-color: #fff6eb;
 }
 
 .nav_links_parent {
@@ -129,56 +119,9 @@ body {
   font-size: 25px;
 }
 
-.item-test {
-  display: block;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: auto;
-  order: 0;
-}
-
-.nav_item_parent {
-  .nav_item {
-    color: #693100;
-    padding: 11px;
-    border-radius: 5px;
-    line-height: 16px;
-    cursor: pointer;
-  }
-
-  .nav_item:hover {
-    background-color: #693100;
-    background-color: #ffe8b3;
-    background-color: #ffb375;
-    /* color: #fff6eb; */
-  }
-}
-
-/* Title Navigation */
-/* .nav_title_parent {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-  align-items: center;
-
-  .nav_logo {
-    background-color: white;
-    line-height: 0;
-  }
-
-  .nav_title {
-    margin-left: 10px;
-    /* height: 30px; 
-    font-size: 30px;
-    line-height: 50px;
-    font-weight: 600;
-    color: #693100;
-  }
-} */
-
+/* Main content */
 .main_content_parent {
-  margin-left: 50px;
+  margin-left: 75px;
   padding: 20px;
   color: black;
 }
