--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -20,7 +20,9 @@
   background-color: #fff6eb;
   border-radius: 5px;
   aspect-ratio: 1 / 1;
-  padding: 10px;
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .card_parent:hover {
