--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   /* line-height: 1.5; */
   font-weight: 400;
   /* color-scheme: light dark; */
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* color: #693100; */
   background-color: #f6eadb;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
