--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -1,19 +1,62 @@
 .banner_parent {
   /* border: 2px solid #fff6eb; */
-  border-radius: 5px;
-  min-height: calc(50vh - 10px);
+  /* border-radius: 5px; */
+  /* min-height: calc(50vh - 10px); */
+  /* min-height: 50vh; */
   box-sizing: border-box;
-  padding: 20px;
+  /* display: grid; */
+  grid-template-columns: 1fr 100px;
+  padding: 20px 20px 0 20px;
   margin-bottom: 10px;
-  /* -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15); */
+  /* background-image: url("../assets/banners/BG-texture-3-gradient.png"); */
+  background-size: cover;
+  background-position: bottom;
+
+  .banner_content {
+    min-height: calc(50vh - 20px);
+
+    /* background-color: #fff6eb; */
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    /* -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15); */
+  }
+
+  /* .banner_left {
+    color: #fff6eb;
+  }
+  .banner_right {
+    color: blue;
+  } */
+}
+
+.page_title {
+  font-size: 100px;
+  margin-left: -5px;
+  color: #fff6eb;
+
+  -webkit-text-stroke: 3px #693100;
 }
 
 .subnav_parent {
-  background-color: #f6eadbb4;
+  /* background-color: #f6eadbb4; */
   position: sticky;
   top: 0;
+  z-index: 1000;
+  padding: 20px;
+
+  background: rgb(246, 234, 219);
+  background: -moz-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
+  background: linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f6eadb",endColorstr="#f6eadb",GradientType=1);
+}
+
+.section_title {
+  margin: 20px 0 10px 0;
 }
 
 .card_parent {
@@ -24,23 +67,27 @@
   display: grid;
   opacity: 0.65;
   color: #693100;
-  /* transition: opacity 2s ease; */
+  align-content: bottom;
 
-  .website_link {
-    display: inline-block;
-    margin-right: 20px;
-    color: #693100;
-    transition: color 0.5s ease;
-  }
+  .card_content {
+    align-self: end;
 
-  .sample_link {
-    display: inline-block;
-    color: #693100;
-    transition: color 0.5s ease;
-  }
+    .website_link {
+      display: inline-block;
+      margin-right: 20px;
+      color: #693100;
+      transition: color 0.5s ease;
+    }
 
-  a:hover {
-    text-decoration: underline;
+    .sample_link {
+      display: inline-block;
+      color: #693100;
+      transition: color 0.5s ease;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
 
