--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -1,25 +1,26 @@
 .banner_parent {
+  padding: 0 20px;
+  margin-bottom: 20px;
   /* border: 2px solid #fff6eb; */
   /* border-radius: 5px; */
   /* min-height: calc(50vh - 10px); */
   /* min-height: 50vh; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* display: grid; */
-  grid-template-columns: 1fr 100px;
-  padding: 20px 20px 0 20px;
-  margin-bottom: 10px;
+  /* grid-template-columns: 1fr 100px; */
   /* background-image: url("../assets/banners/BG-texture-3-gradient.png"); */
-  background-size: cover;
-  background-position: bottom;
+  /* background-size: cover;
+  background-position: bottom; */
 
   .banner_content {
-    min-height: calc(50vh - 20px);
-
     /* background-color: #fff6eb; */
     border-radius: 5px;
-    display: flex;
+    text-align: right;
+
+    /* min-height: calc(50vh - 20px); */
+    /* display: flex;
     justify-content: flex-end;
-    flex-direction: column;
+    flex-direction: column; */
     /* -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15); */
@@ -37,7 +38,7 @@
   font-size: 100px;
   margin-left: -5px;
   color: #fff6eb;
-
+  text-transform: uppercase;
   -webkit-text-stroke: 3px #693100;
 }
 
@@ -47,7 +48,6 @@
   top: 0;
   z-index: 1000;
   padding: 20px;
-
   background: rgb(246, 234, 219);
   background: -moz-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
   background: -webkit-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
@@ -57,6 +57,10 @@
 
 .section_title {
   margin: 20px 0 10px 0;
+}
+
+.section_parent {
+  padding: 20px;
 }
 
 .card_parent {
