--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -1,58 +1,63 @@
 .banner_parent {
+  position: sticky;
+  top: 0;
   padding: 0 20px;
-  margin-bottom: 20px;
-  /* border: 2px solid #fff6eb; */
-  /* border-radius: 5px; */
-  /* min-height: calc(50vh - 10px); */
-  /* min-height: 50vh; */
-  /* box-sizing: border-box; */
-  /* display: grid; */
-  /* grid-template-columns: 1fr 100px; */
-  /* background-image: url("../assets/banners/BG-texture-3-gradient.png"); */
-  /* background-size: cover;
-  background-position: bottom; */
-
-  .banner_content {
-    /* background-color: #fff6eb; */
-    border-radius: 5px;
-    text-align: right;
-
-    /* min-height: calc(50vh - 20px); */
-    /* display: flex;
-    justify-content: flex-end;
-    flex-direction: column; */
-    /* -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15); */
-  }
-
-  /* .banner_left {
-    color: #fff6eb;
-  }
-  .banner_right {
-    color: blue;
-  } */
+  /* min-height: 75px; */
+  box-sizing: border-box;
+  /* padding: 0 20px;*/
+  border-bottom: 1px solid #69310033;
+  background-color: #f6eadb;
+  z-index: 1000;
 }
 
 .page_title {
-  font-size: 100px;
-  margin-left: -5px;
-  color: #fff6eb;
+  /* background-color: rgb(90, 90, 90); */
+  font-size: 55px;
+  line-height: 48px;
+  margin-top: -6px;
+  color: #693100;
   text-transform: uppercase;
-  -webkit-text-stroke: 3px #693100;
 }
 
 .subnav_parent {
-  /* background-color: #f6eadbb4; */
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  padding: 20px;
-  background: rgb(246, 234, 219);
+  color: #693100;
+  text-align: right;
+
+  /* background-color: rgba(0, 0, 255, 0.393); */
+  /* text-align: right; */
+  /* background-color: green; */
+  /* display: flex; */
+
+  /* display: flex;
+  justify-content: flex-end;
+  align-items: stretch; */
+  /* height: 100; */
+  /* flex-direction: row; */
+
+  /*  background: rgb(246, 234, 219);
   background: -moz-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
   background: -webkit-linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
   background: linear-gradient(0deg, rgba(246, 234, 219, 0) 0%, rgba(246, 234, 219, 1) 77%, rgba(246, 234, 219, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f6eadb",endColorstr="#f6eadb",GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f6eadb",endColorstr="#f6eadb",GradientType=1); */
+}
+
+.subnav_item {
+  /* background-color: rgb(66, 128, 128); */
+  display: inline-block;
+  /* flex-grow: 1; */
+  /* padding: 20px; */
+  padding: 10px 20px;
+  cursor: pointer;
+  height: 75px;
+  box-sizing: border-box;
+
+  /* padding: 20px; */
+}
+
+.subnav_item:hover {
+  /* background-color: #693100;
+  color: white; */
+  border-bottom: 1px solid red;
 }
 
 .section_title {
