--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,31 @@ body {
   left: 0;
   bottom: 0;
   width: 75px;
-  /* width: 225px; */
   height: 100vh;
   background-color: #fff6eb;
   box-sizing: border-box;
-  transition: width 0.17s ease-in-out;
+  transition: width 0.2s ease-in-out, box-shadow 0.5s ease-in-out;
   z-index: 10000;
 }
 
+/* Add width & box Shadow to nav on hover */
 .side_nav_parent:hover {
   width: 200px;
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
+
+  .header_item {
+    .header_item_icon {
+      /* height: 55px; */
+      padding: 10px;
+    }
+    .header_item_text {
+      margin-left: -4px;
+    }
+    .material-icons-round {
+      font-size: 35px;
+    }
+  }
 }
 
 .side_nav_content {
@@ -39,15 +52,47 @@ body {
   align-content: stretch;
 }
 
-.nav_header {
-  /* background-color: #f6eadb; */
-  background-color: #fff6eb;
+.nav_links_parent {
+  color: #693100;
 }
 
-.nav_links_parent {
-  /* background-color: #f6eadb;
-  border-radius: 5px; */
-  color: #693100;
+.header_item {
+  text-decoration: none;
+  display: flex;
+  color: #f6eadb;
+  overflow: hidden;
+  cursor: pointer;
+  align-items: center;
+  border-radius: 5px;
+
+  .header_item_icon {
+    height: 55px;
+    padding: 5px;
+    box-sizing: border-box;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #69310070;
+    transition: padding 0.2s ease-in-out;
+  }
+
+  .header_item_text {
+    font-size: 22px;
+    font-weight: bold;
+    text-wrap: nowrap;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #69310070;
+    letter-spacing: 1.5px;
+    transform: translateY(-1px);
+    margin-left: 50px;
+    transition: margin-left 0.25s ease-in-out;
+
+    /* text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5); */
+  }
+
+  .material-icons-round {
+    font-size: 45px;
+    transition: font-size 0.2s ease-in-out;
+    /* transition: height 0.25s ease-in-out, padding 0.25s ease-in-out; */
+  }
 }
 
 .nav_item {
@@ -59,7 +104,7 @@ body {
   cursor: pointer;
   align-items: center;
   border-radius: 5px;
-  opacity: 0.75;
+  opacity: 0.7;
 }
 
 .nav_item.active {
@@ -105,7 +150,7 @@ body {
   cursor: pointer;
   align-items: center;
   border-radius: 5px;
-  opacity: 0.75;
+  opacity: 0.7;
 
   .footer_icon {
     height: 55px;
