Update header title style

--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,8 @@ body {
   color: #ff4c00; */
   font-size: 25px;
 }
-
+/* Main content */
+/* Main content */
 /* Main content */
 .main_content_parent {
   margin-left: 75px;
