--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -8,15 +8,18 @@
   border-bottom: 0.5px solid #69310033;
   background-color: #f6eadb;
   z-index: 1000;
+  background-image: url("../assets/banners/BG-texture-1.png");
 }
 
 .page_title {
   /* background-color: rgb(90, 90, 90); */
-  font-size: 55px;
+  /* font-size: 55px;
   line-height: 48px;
-  margin-top: -6px;
+  margin-top: -6px; */
   color: #693100;
   text-transform: uppercase;
+  transform: translateY(-2px);
+  margin: 10px 0;
 }
 
 .subnav_parent {
