--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,7 @@ body {
 .nav_item_text {
   font-size: 16px;
   text-wrap: nowrap;
+  text-transform: uppercase;
   /* line-height: 25px; */
   /* height: 55px; */
   /* padding: 15px; */
