--- a/src/pages/subpage.css
+++ b/src/pages/subpage.css
@@ -40,13 +40,21 @@
   display: grid;
   align-items: center;
   padding: 0 5px;
+  opacity: 0.7;
   border: 2px solid transparent;
+  color: #693100;
 }
 
 .subnav_item:hover {
-  border-bottom: 2px solid #693100;
+  color: #693100;
+  border-bottom: 2px solid #69310075;
+  opacity: 0.7;
 }
 
+.subnav_item.active {
+  opacity: 1;
+  border-bottom: 2px solid #693100;
+}
 .section_title {
   margin: 20px 0 10px 0;
 }
